--- a/Web.config
+++ b/Web.config
@@ -12,6 +12,7 @@
     <add name="connectionstring" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\dheeraj\Desktop\E-Notice Board1\App_Data\Database.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
+       <customErrors mode="RemoteOnly" defaultRedirect="mycustompage.htm"/>
     <sessionState mode="InProc" timeout="10"/>
     <compilation debug="false" targetFramework="4.5">
       <assemblies>
