--- a/Web.config
+++ b/Web.config
@@ -12,9 +12,9 @@
     <add name="connectionstring" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\dheeraj\Desktop\E-Notice Board1\App_Data\Database.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
-       <customErrors mode="on" defaultRedirect="Home.htm"/>
+       <customErrors mode="RemoteOnly" defaultRedirect="Home.htm"/>
     <sessionState mode="InProc" timeout="10"/>
-    <compilation debug="false" targetFramework="4.5">
+    <compilation debug="true" targetFramework="4.5">
       <assemblies>
         <add assembly="CrystalDecisions.CrystalReports.Engine, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304"/>
         <add assembly="CrystalDecisions.ReportSource, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304"/>
